[gd_scene load_steps=5 format=3 uid="uid://cp4npuuxewybj"]

[ext_resource type="Script" path="res://src/scenes/managers/debugManager.gd" id="1_c7di6"]
[ext_resource type="Shader" path="res://src/shaders/font/solidShadowOutline.gdshader" id="2_6uka4"]
[ext_resource type="Theme" uid="uid://bh65lv32qeej" path="res://src/themes/retroFontTheme.tres" id="3_nq4vn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_chtqg"]
shader = ExtResource("2_6uka4")

[node name="DebugManager" type="CanvasLayer"]
script = ExtResource("1_c7di6")

[node name="visual" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="visual"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.286275)

[node name="MarginContainer" type="MarginContainer" parent="visual"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="visual/MarginContainer"]
layout_mode = 2

[node name="display" type="VBoxContainer" parent="visual/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="Fps" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
material = SubResource("ShaderMaterial_chtqg")
layout_mode = 2
theme = ExtResource("3_nq4vn")
text = "fps: placeholder"

[node name="PlayerVelocity" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
material = SubResource("ShaderMaterial_chtqg")
layout_mode = 2
theme = ExtResource("3_nq4vn")
text = "velocity: placeholder"

[node name="PlayerInput" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
material = SubResource("ShaderMaterial_chtqg")
layout_mode = 2
theme = ExtResource("3_nq4vn")
text = "input: placeholder"

[node name="CameraOffset" type="Label" parent="visual/MarginContainer/HBoxContainer/display"]
material = SubResource("ShaderMaterial_chtqg")
layout_mode = 2
theme = ExtResource("3_nq4vn")
text = "cameraOffset: placeholder"

[node name="justifyBetween" type="Control" parent="visual/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="commands" type="VBoxContainer" parent="visual/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="visual/MarginContainer/HBoxContainer/commands"]
layout_mode = 2

[node name="PlayerHpAmount" type="LineEdit" parent="visual/MarginContainer/HBoxContainer/commands/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "amount"
expand_to_text_length = true

[node name="RemovePlayerHp" type="Button" parent="visual/MarginContainer/HBoxContainer/commands/HBoxContainer"]
layout_mode = 2
text = "remove player hp"

[connection signal="pressed" from="visual/MarginContainer/HBoxContainer/commands/HBoxContainer/RemovePlayerHp" to="." method="_on_remove_player_hp_pressed"]
